2009-07-22  Peter Kasting  <pkasting@google.com>

        Reviewed by David Kilzer.

        https://bugs.webkit.org/show_bug.cgi?id=27323
        Factor svn-create-patch's "determineSvnRoot()" into a function in
        VCSUtils.pm so commit-log-editor can use it too.

        * Scripts/VCSUtils.pm: Add determineSVNRoot().
        * Scripts/commit-log-editor: Use determineSVNRoot() instead of old
          code (which didn't work as well).
        * Scripts/svn-create-patch: Remove determineSvnRoot() (moved).

2009-07-22  Jakob Petsovits  <jakob.petsovits@torchmobile.com>

        Reviewed by Adam Treat.

        Fix cpplint generating false positives for
        "primary" includes in headers.
        https://bugs.webkit.org/show_bug.cgi?id=27553

        Doing so by only flagging includes in header files
        as primary when the include filename exactly matches
        the header filename.

        * Scripts/modules/cpplint.py:
        * Scripts/modules/cpplint_unittest.py:

2009-07-22  Jakob Petsovits  <jakob.petsovits@torchmobile.com>

        Reviewed by Adam Treat.

        cpplint generates false positives for primary includes
        https://bugs.webkit.org/show_bug.cgi?id=27544

        Fix false positives for instances when cpplint would
        normally classify multiple includes as primary: After
        the first primary include, classify subsequent ones as
        "other" includes even if they look like primary ones.

        * Scripts/modules/cpplint.py:
        * Scripts/modules/cpplint_unittest.py:

2009-07-22  Gabor Rapcsanyi  <rapcsanyi.gabor@stud.u-szeged.hu>

        Reviewed by Simon Hausmann.

        Pass XAUTHORITY environment variable to $dumpTool as well.

        * Scripts/run-webkit-tests:

2009-07-21  Jakob Petsovits  <jakob.petsovits@torchmobile.com>

         Reviewed by Adam Treat.

         Add check for correct wtf includes to cpplint.
         https://bugs.webkit.org/show_bug.cgi?id=27524
