@@ -1,3 +1,13 @@
+2009-07-22  Shinichiro Hamaji  <hamaji@chromium.org>
+
+        Reviewed by David Levin.
+
+        run-webkit-lint should have --git-commit option
+        https://bugs.webkit.org/show_bug.cgi?id=27528
+
+        * Scripts/modules/cpplint.py:
+        * Scripts/run-webkit-lint:
+
 2009-07-22  Peter Kasting  <pkasting@google.com>
 
         Reviewed by David Kilzer.
